# clean-todo-demo

./: .gitignore  Cargo.toml  tasks.db  Классы.plantuml  Пакеты.plantuml
.sqlx/: query-c74d5804a0d7e54c13b45e7739d30f599e24f43cffce8ee45dfe8b8c07dad33d.json
migrations/: 20250717211242_create_todo_table.sql
src/: main.rs  presentation.rs
src/application/: services.rs
src/domain/: entities.rs  repositories.rs
src/infrastructure/: in_memory.rs  sqlite.rs
src/presentation/: dto.rs  web_controller.rs
